[gd_scene load_steps=10 format=3 uid="uid://be2f5ipwiihn5"]

[ext_resource type="Script" path="res://Player/PlayerMovement.gd" id="1_w3c8f"]
[ext_resource type="Script" path="res://Player/TorchHolder.gd" id="5_2xtvf"]
[ext_resource type="Script" path="res://Time Control/SendTickOnMove.gd" id="5_m872l"]
[ext_resource type="Script" path="res://Interaction/InteractExecuter.gd" id="6_ypl7j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wjg20"]
radius = 64.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yoi7e"]
size = Vector2(110, 120)

[sub_resource type="CircleShape2D" id="CircleShape2D_2du28"]
radius = 45.0

[sub_resource type="Gradient" id="Gradient_ndpbp"]
offsets = PackedFloat32Array(0, 0.687356)
colors = PackedColorArray(0.90172, 0.90172, 0.90172, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5y05d"]
gradient = SubResource("Gradient_ndpbp")
width = 512
height = 512
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource("1_w3c8f")

[node name="Polygon2D" type="Polygon2D" parent="."]
scale = Vector2(0.5, 0.5)
color = Color(0, 0, 1, 1)
polygon = PackedVector2Array(64, 2.08165e-12, 50, 64, -64, 64, -64, -64, 50, -64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_wjg20")

[node name="Hit Box" type="Area2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit Box"]
position = Vector2(-5, 0)
shape = SubResource("RectangleShape2D_yoi7e")
debug_color = Color(8.64036e-07, 0.647778, 0.201317, 0.42)

[node name="Interaction Box" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction Box"]
shape = SubResource("CircleShape2D_2du28")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.75, 0.75)

[node name="TorchHolder" type="Node2D" parent="." node_paths=PackedStringArray("default_light")]
script = ExtResource("5_2xtvf")
default_light = NodePath("mini light")

[node name="mini light" type="PointLight2D" parent="TorchHolder"]
energy = 0.5
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 1.5
texture = SubResource("GradientTexture2D_5y05d")
offset = Vector2(0.5, 0.5)
texture_scale = 0.75

[node name="SendTickOnMove" type="Node" parent="."]
script = ExtResource("5_m872l")

[node name="InteractExecuter" type="Node" parent="."]
script = ExtResource("6_ypl7j")
hold_time = 1.0
tick_on_hold = true

[connection signal="body_entered" from="Hit Box" to="." method="_on_hit_box_body_entered"]
[connection signal="body_entered" from="Interaction Box" to="InteractExecuter" method="_on_body_entered"]
[connection signal="body_exited" from="Interaction Box" to="InteractExecuter" method="_on_body_exited"]
